enum MSG_KIND
{
    EMPTY = 0;

    REQ_ABOUT  = 100;
    RESP_ABOUT = 101;

    REQ_TEXT   = 102;
    RESP_TEXT  = 103;

    REQ_WAIT   = 104;
    RESP_WAIT  = 105;
}

message ReqCommon {
    optional string request_id = 1;
}

message RespCommon {
    optional string request_id = 1;
}

message ReqText {
    optional string request_id = 1;
    optional string text = 2;
}

message RespText {
    optional string request_id = 1;
    optional string text = 2;
}

message ReqAbout {
    optional string request_id = 1;
}

message RespAbout {
    optional string request_id = 1;
    optional string about = 2;
}

message ReqWait {
    optional string request_id = 1;
    optional int32  seconds = 2;
}

message RespWait {
    optional string request_id = 1;
}

// Models
message Quote {
    optional int64 id = 1;
    optional string quote = 2;
    optional string author = 3;
}
